      48x48) (AZAWAWI)
    - Small improvements/fixes to some dialogs: Refactoring, Open URL, Goto,
      Save as, Preferences, Insert File, New Perl Distribution (Zeno Gantner)
    - New document statistics dialog, faster computation of document statistics
      (Zeno Gantner)
    - Added missing File::pushd Padre dependency (AZAWAWI)

0.58 2010.03.08  **WARNING Still not stable**
    - Fixed "Open File In Existing Padre" for non-win32 (PDONELAN)
    - In advanced preferences, display the storage backend name when it is
      default and 'User' is now called 'Overriden' (AZAWAWI)
    - In advanced preferences, display preferences options for non-boolean
      settings (AZAWAWI) 
    - In advanced preferences, display a True/False radio button for boolean
      settings (AZAWAWI)
    - Fixed an incorrect default value display bug in advanced preferences
      when it is toggled (AZAWAWI)
    - In advanced preferences, hide bottom controls at startup (AZAWAWI)
    - In advanced preferences, Set button is hidden when it is a boolean. 
      True/false radio buttons handle the switch instead (AZAWAWI)
    - Fixed ticket #858 Recent files does not display anything on Padre startup
      (AZAWAWI)
    - Refresh all menus at startup. This prevents "nothing" open mode (i.e. no
      document) from incorrectly showing an enabled menubar (AZAWAWI)
    - Padre::Util::share() can now get the name of a plugin (e.g. 'Perl6') and
      return the share directory of that plugin (SZABGAB)
    - Removed the unused concept of user-configurable menus, which was slowing
      down a ton of different operations that needed a menu refresh (ADAMK)
    - Removed ->refresh calls during the initial menu construction, as we
      will be refresh'ing again anyway at the end of the startup, and thus
      any work done in the menus is completely wasted CPU (ADAMK)
    - Removed the very expensive window list refresh code from the main menu